k8s/templates/ctfg-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ctfg-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ctfg-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ctfg-default: "true"
